<resources>
    <string name="app_name">Foxmike</string>
    <string name="title_activity_maps">SportsApp</string>
    <string name="title_activity_user_activity">Your page</string>
    <string name="title_activity_training_session">Create session</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_join_session">Session</string>
    <string-array name="duration_array">
        <item>10 min</item>
        <item>20 min</item>
        <item>30 min</item>
        <item>40 min</item>
        <item>50 min</item>
        <item>60 min</item>
        <item>70 min</item>
        <item>80 min</item>
        <item>90 min</item>
        <item>100 min</item>
        <item>110 min</item>
        <item>120 min</item>
    </string-array>
    <string-array name="price_array_SE">
        <item>Gratis</item>
        <item>30 kr</item>
        <item>40 kr</item>
        <item>50 kr</item>
        <item>60 kr</item>
        <item>70 kr</item>
        <item>80 kr</item>
        <item>90 kr</item>
        <item>100 kr</item>
    </string-array>
    <string-array name="price_array_filter_min">
        <item>Min</item>
        <item>Gratis</item>
        <item>30 kr</item>
        <item>40 kr</item>
        <item>50 kr</item>
        <item>60 kr</item>
        <item>70 kr</item>
        <item>80 kr</item>
        <item>90 kr</item>
        <item>100 kr</item>
    </string-array>
    <string-array name="price_array_filter_max">
        <item>Max</item>
        <item>Gratis</item>
        <item>30 kr</item>
        <item>40 kr</item>
        <item>50 kr</item>
        <item>60 kr</item>
        <item>70 kr</item>
        <item>80 kr</item>
        <item>90 kr</item>
        <item>100 kr</item>
    </string-array>
    <string-array name="max_participants_array">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
        <item>60</item>
        <item>61</item>
        <item>62</item>
        <item>63</item>
        <item>64</item>
        <item>65</item>
        <item>66</item>
        <item>67</item>
        <item>68</item>
        <item>69</item>
        <item>70</item>
        <item>71</item>
        <item>72</item>
        <item>73</item>
        <item>74</item>
        <item>75</item>
        <item>76</item>
        <item>77</item>
        <item>78</item>
        <item>79</item>
        <item>80</item>
        <item>81</item>
        <item>82</item>
        <item>83</item>
        <item>84</item>
        <item>85</item>
        <item>86</item>
        <item>87</item>
        <item>88</item>
        <item>89</item>
        <item>90</item>
        <item>91</item>
        <item>92</item>
        <item>93</item>
        <item>94</item>
        <item>95</item>
        <item>96</item>
        <item>97</item>
        <item>98</item>
        <item>99</item>
        <item>100</item>
    </string-array>
    <string-array name="sort_list_array">
        <item>Date</item>
        <item>Distance</item>
    </string-array>
    <string-array name="filter_list_array">
        <item>600 km</item>
        <item>3 km</item>
        <item>1 km</item>
    </string-array>
    <string name="distance1_text">3 km</string>
    <string name="distance2_text">8 km</string>
    <string name="distance3_text">16 km</string>
    <string name="distance4_text">40 km</string>
    <string name="distance5_text">80 km</string>
    <string name="distance6_text">1000 km</string>
    <string name="distanceMax">Max</string>
    <string name="sort_type_date">date</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_profile_picture">Choose profile picture</string>
    <string name="session_image">Session image</string>
    <string name="switch_mode_icon">Switch mode icon</string>
    <string name="loading">Loading...</string>
    <string name="switch_to_trainer_mode">Switch to trainer mode</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="need_an_account">Need an account?</string>
    <string name="your_name">Your name</string>
    <string name="your_email">Your email</string>
    <string name="your_password">Your password</string>
    <string name="sign_up">Sign up</string>
    <string name="finish_setup">Finish setup</string>
    <string name="session_name">Session name</string>
    <string name="session_type">Session type</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="mlevel">Level</string>
    <string name="maximum_participants">Maximum participants</string>
    <string name="mDescription">Description</string>
    <string name="create_session">Create session</string>
    <string name="set">Set</string>
    <string name="join_session">Join session</string>
    <string name="session_name_goes_here">Session name goes here</string>
    <string name="address">Address</string>
    <string name="trainer_name">Trainer name</string>
    <string name="log_out">Log out</string>
    <string name="clear_db">Clear Db</string>
    <string name="session_text">Session text</string>
    <string name="description_goes_here">Description goes here</string>
    <string name="date_goes_here">Date goes here</string>
    <string name="sessions">Sessions</string>
    <string name="is_you_trainer">\u0020is your trainer</string>
    <string name="cancel_booking">Cancel booking</string>
    <string name="update_session">Update session</string>
    <string name="sessions_attending">Sessions Attending</string>
    <string name="sessions_hosting">Sessions Hosting</string>
    <string name="display_session">Display session</string>
    <string name="updating_session">Updating session…</string>
    <string name="creating_session">Creating session…</string>
    <string name="select_time">Select Time</string>
    <string name="choose_session_type">Choose session type</string>
    <string name="session_duration">Session duration in minutes</string>
    <string name="nr_participants">Nr of participants</string>
    <string name="type_in_necessary_information">Type in necessary information</string>
    <string name="tab_messages">Messages</string>
    <string name="tab_friends">Friends</string>
    <string name="tab_notifications">Notifications</string>
    <string name="unknown_area">Unknown area</string>
    <string name="failed">failed</string>
    <string name="Session_not_found_please_try_again_later">Session not found, please try again later.</string>
    <string name="meet_your_session_leader">Meet your session leader,</string>
    <string name="upcoming_advertisements">Upcoming advertisements</string>
    <string name="date_text">Date</string>
    <string name="distance_word">Distance</string>
    <string name="switch_to_participant_mode_text">Switch to participant mode</string>
    <string name="switch_to_host_mode_text">Switch to trainer mode</string>
    <string name="hint_enter_message">Enter Message…</string>
    <string name="CD_send_button">Send button</string>
    <string name="placeholder_user_name">Display Name</string>
    <string name="placeholder_last_seen">Last Seen</string>
    <string name="CD_choose_session_image_button">Choose session image button</string>
    <string name="CD_location_icon">Location_icon</string>
    <string name="advertised_word">Advertised</string>
    <string name="CD_date_icon">Date icon</string>
    <string name="CD_duration_icon">Duration icon</string>
    <string name="duration_hint">Duration</string>
    <string name="CD_participants_icon">Participants icon</string>
    <string name="CD_time_icon">Time icon</string>
    <string name="what_hint">What will you do</string>
    <string name="who_hint">Who can attend</string>
    <string name="where_hint">Where we’ll meet up</string>
    <string name="location_loading">Location loading…</string>
    <string name="advertised_text">Advertised</string>
    <string name="advertised_not_text">Not advertised</string>
    <string name="booked_text">Bookings</string>
    <string name="booked_history_text">History</string>
    <string name="send_message_text">Send message</string>
    <string name="what_heading">What we’ll do</string>
    <string name="who_heading">Who can come</string>
    <string name="where_heading">Where we’ll meet up</string>
    <string name="pick_location_text">Pick a location by clicking on map!</string>
    <string name="Sort_on_text">In the list, sort sessions by:</string>
    <string name="filter_on_distance_text">Only show sessions within this distance from my location:</string>
    <string name="send_friend_request_text">Send friend request</string>
    <string name="decline_friend_request_text">Decline friend request</string>
    <string name="Write_something_hint_text">Write something…</string>
    <string name="make_comment_text">Comment</string>
    <string name="log_out_text">Log out</string>
    <string name="show_and_edit_profile_text">Show and edit profile</string>
    <string name="update_profile_button_text">Update profile</string>
    <string name="post_text">Post</string>
    <string name="send_post_text">SEND</string>
    <string name="friend_requests_text">Friend requests</string>
    <string name="your_friends_text">Your friends</string>
    <string name="sessionLeader">Session leader:</string>
    <string name="hosted_by_text">Arranged by</string>
    <string name="last_seen_text">Last seen\u0020</string>
    <string name="comment_text">\u0020comment</string>
    <string name="comments_text">\u0020comments</string>
    <string name="login_text">Login</string>
    <string name="register_text">Register</string>
    <string name="welcome_to_foxmike_text">Welcome to Foxmike</string>
    <string name="continue_to_facebook_text">Continue with Facebook</string>
    <string name="menu_inbox">Inbox</string>
    <string name="menu_my_sessions">My sessions</string>
    <string name="menu_my_bookings">My bookings</string>
    <string name="menu_explore">Explore</string>
    <string name="menu_profile">Account</string>
    <string name="add_payment_method">Add payment method</string>
    <string name="cancel">Cancel</string>
    <string name="you_need_a_payment_method_in_order_to_book_this_session">You need a payment method in order to book this session.</string>
    <string name="booking_failed">Booking failed</string>
    <string name="save">Save</string>
</resources>