<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menuInbox"
        android:enabled="true"
        android:icon="@drawable/baseline_chat_bubble_outline_black_36"
        android:title="@string/menu_inbox"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menuHostSessions"
        android:enabled="true"
        android:icon="@drawable/baseline_access_time_black_36"
        android:title="@string/menu_my_sessions"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menuProfile"
        android:enabled="true"
        android:icon="@drawable/baseline_account_circle_black_36"
        android:title="@string/menu_profile"
        app:showAsAction="ifRoom" />
</menu>