<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sessionImageContainer">

        <ImageButton
            android:id="@+id/sessionImageBtn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/color_background_light"
            android:contentDescription="@string/CD_choose_session_image_button"
            android:scaleType="centerCrop"
            app:srcCompat="@mipmap/ic_add_a_photo_black_48dp" />

    </RelativeLayout>

    <android.support.design.widget.TextInputLayout
        android:focusedByDefault="false"
        android:id="@+id/sessionNameTIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/primaryTextColor"
        android:textColorHint="@color/primaryTextColor"
        android:backgroundTint="@color/primaryTextColor"
        android:layout_marginTop="@dimen/marginVertical"
        app:layout_constraintTop_toBottomOf="@id/sessionImageContainer"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="@color/primaryTextColor"
            android:backgroundTint="@color/primaryTextColor"
            android:layout_margin="@dimen/margin_left"
            android:id="@+id/sessionNameET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/session_name_goes_here"
            android:inputType="textCapSentences"/>
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:id="@+id/locationFrame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/sessionNameTIL"
        android:paddingTop="@dimen/padding_vertical_edittext"
        android:paddingBottom="@dimen/padding_vertical_edittext">
        <ImageView
            android:id="@+id/locationIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_left"
            android:src="@drawable/ic_edit_location_black_24dp"
            android:contentDescription="@string/CD_location_icon" />
        <TextView
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:id="@+id/locationTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_left"
            android:background="@android:color/transparent"
            android:focusable="false"
            android:layout_gravity="center_vertical"
            android:text="Fjällsvik 5"
            android:hint="@string/location_loading"
            android:longClickable="false"/>
    </LinearLayout>

    <CheckedTextView
        android:id="@+id/advertised"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:paddingStart="@dimen/margin_left"
        android:paddingEnd="@dimen/margin_right"
        android:layout_marginTop="@dimen/margin_top_text"
        android:checkMark="@mipmap/ic_check_box_outline_blank_black_24dp"
        android:text="@string/advertised_word"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/locationFrame" />

    <LinearLayout
        android:id="@+id/sessionTypeFrame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/advertised"
        android:paddingTop="@dimen/padding_vertical_edittext"
        android:paddingBottom="@dimen/padding_vertical_edittext">
        <ImageView
            android:id="@+id/sessionTypeIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_left"
            android:src="@drawable/ic_filter_list_black_24dp"
            android:contentDescription="@string/CD_date_icon" />
        <EditText
            android:id="@+id/sessionTypeET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_left"
            android:background="@android:color/transparent"
            android:focusable="false"
            android:layout_gravity="center_vertical"
            android:hint="@string/session_type"
            android:inputType="textCapSentences"
            android:longClickable="false"
            android:textSize="@dimen/size_editText"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/dateFrame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:layout_constraintTop_toBottomOf="@id/sessionTypeFrame"
        android:paddingTop="@dimen/padding_vertical_edittext"
        android:paddingBottom="@dimen/padding_vertical_edittext">
        <ImageView
            android:id="@+id/dateIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:layout_marginStart="@dimen/margin_left"
            android:src="@mipmap/ic_date_range_black_24dp"
            android:contentDescription="@string/CD_date_icon" />
        <EditText
            android:id="@+id/dateET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:layout_marginStart="@dimen/margin_left"
            android:background="@android:color/transparent"
            android:focusable="false"
            android:layout_gravity="center_vertical"
            android:hint="@string/date"
            android:inputType="date"
            android:textSize="@dimen/size_editText"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/timeFrame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/dateFrame"
        android:paddingTop="@dimen/padding_vertical_edittext"
        android:paddingBottom="@dimen/padding_vertical_edittext">
        <ImageView
            android:id="@+id/timeIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_left"
            android:src="@mipmap/ic_access_time_black_24dp"
            android:contentDescription="@string/CD_time_icon" />
        <EditText
            android:id="@+id/timeET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_left"
            android:background="@android:color/transparent"
            android:focusable="false"
            android:layout_gravity="center_vertical"
            android:hint="@string/time"
            android:inputType="textPersonName"
            android:longClickable="false"
            android:textSize="@dimen/size_editText"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/durationFrame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/timeFrame"
        android:paddingTop="@dimen/padding_vertical_edittext"
        android:paddingBottom="@dimen/padding_vertical_edittext">
        <ImageView
            android:id="@+id/durationIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_left"
            android:src="@mipmap/ic_timelapse_black_24dp"
            android:contentDescription="@string/CD_duration_icon" />
        <EditText
            android:id="@+id/durationET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_left"
            android:background="@android:color/transparent"
            android:focusable="false"
            android:layout_gravity="center_vertical"
            android:hint="@string/duration_hint"
            android:inputType="number"
            android:longClickable="false"
            android:textSize="@dimen/size_editText"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/maxParticipantFrame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/durationFrame"
        android:paddingTop="@dimen/padding_vertical_edittext"
        android:paddingBottom="@dimen/padding_vertical_edittext">
        <ImageView
            android:id="@+id/maxParticipantsIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_left"
            android:src="@mipmap/ic_people_black_24dp"
            android:contentDescription="@string/CD_participants_icon" />
        <EditText
            android:id="@+id/maxParticipantsET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_left"
            android:background="@android:color/transparent"
            android:focusable="false"
            android:layout_gravity="center_vertical"
            android:hint="@string/maximum_participants"
            android:inputType="number"
            android:longClickable="false"
            android:textSize="@dimen/size_editText"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/maxParticipantFrame">

        <android.support.design.widget.TextInputLayout
            android:focusedByDefault="false"
            android:id="@+id/whatTIL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/primaryTextColor"
            android:layout_marginTop="@dimen/marginVertical">

            <EditText
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/primaryTextColor"
                android:backgroundTint="@color/primaryTextColor"
                android:layout_marginStart="@dimen/margin_left"
                android:layout_marginEnd="@dimen/margin_right"
                android:id="@+id/whatET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/what_hint"
                android:inputType="textCapSentences|textMultiLine"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:focusedByDefault="false"
            android:id="@+id/whoTIL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/primaryTextColor"
            android:layout_marginTop="@dimen/marginVertical">

            <EditText
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/primaryTextColor"
                android:backgroundTint="@color/primaryTextColor"
                android:layout_marginStart="@dimen/margin_left"
                android:layout_marginEnd="@dimen/margin_right"
                android:id="@+id/whoET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/who_hint"
                android:inputType="textCapSentences|textMultiLine"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:focusedByDefault="false"
            android:id="@+id/whereTIL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/primaryTextColor"
            android:layout_marginTop="@dimen/marginVertical">

            <EditText
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/primaryTextColor"
                android:backgroundTint="@color/primaryTextColor"
                android:layout_marginStart="@dimen/margin_left"
                android:layout_marginEnd="@dimen/margin_right"
                android:id="@+id/whereET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/where_hint"
                android:inputType="textCapSentences|textMultiLine"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/createSessionBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="@dimen/margin_left"
            android:layout_marginEnd="@dimen/margin_right"
            android:layout_marginTop="@dimen/marginVertical"
            android:background="@drawable/rounded_button_primary"
            android:text="@string/create_session"
            android:textColor="@color/secondaryTextColor" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>