<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_background_light">

    <!-- Dummy item to prevent AutoCompleteTextView from receiving focus -->
    <LinearLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="0px"
        android:layout_height="0px"/>

    <TextView
        android:id="@+id/needPaymentMethodText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:text="@string/booking_failed"
        android:layout_margin="@dimen/margin_left"
        android:nextFocusUp="@id/loginText"
        android:nextFocusLeft="@id/loginText"/>

    <TextView
        android:id="@+id/needPaymentMethodText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:text="@string/you_need_a_payment_method_in_order_to_book_this_session"
        android:layout_margin="@dimen/margin_left"
        android:nextFocusUp="@id/loginText"
        android:nextFocusLeft="@id/loginText"
        android:layout_below="@id/needPaymentMethodText1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:layout_below="@id/needPaymentMethodText2">

        <Button
            android:stateListAnimator="@null"
            android:id="@+id/cancelBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/color_background_light"
            android:textColor="@color/foxmikePrimaryColor"
            android:paddingStart="@dimen/margin_left"
            android:paddingEnd="@dimen/margin_right"
            android:layout_marginEnd="@dimen/margin_right"
            android:text="@string/cancel"
            android:layout_gravity="end"/>

        <Button
            android:stateListAnimator="@null"
            android:id="@+id/addPaymentMethodBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/color_background_light"
            android:textColor="@color/foxmikePrimaryColor"
            android:paddingStart="@dimen/margin_left"
            android:paddingEnd="@dimen/margin_right"
            android:layout_marginEnd="@dimen/margin_right"
            android:layout_marginBottom="@dimen/marginVertical"
            android:text="@string/add_payment_method" />


    </LinearLayout>
</RelativeLayout>
